k8s/linkwarden/meilisearch.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: linkwarden
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.54.3
          ports:
            - containerPort: 7700
          volumeMounts:
            - name: meili-data
              mountPath: /meili_data
      volumes:
        - name: meili-data
          persistentVolumeClaim:
            claimName: meili-data
---

apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: linkwarden
spec:
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700
  type: ClusterIP
