k8s/linkwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden-ingress
  namespace: linkwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: links.alexmihai.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  number: 80
  # tls: resolved externally by Nginx Proxy Manager
